<resources>
    <string name="app_name">MOBV Assignment</string>
    <string name="register">Register</string>
    <string name="email_textview">Email:</string>
    <string name="email_hint">Input your email</string>
    <string name="username_textview">Username:</string>
    <string name="username_hint">Input your username</string>
    <string name="password_textview">Password:</string>
    <string name="password_hint">Input your password</string>
    <string name="password_repeat_textview">Repeat the password:</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="log_in">Log in</string>
    <string name="have_account">Already have an account? Login here</string>
    <string name="dont_have_account">Dont have an account? Register here</string>

    <string name="forgotten_password">Forgotten password?</string>
    <string name="reset_password_header">Reset of forgotten password</string>
    <string name="reset_password_email">Input your registration email</string>
    <string name="reset_password_confirm">Confirm</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibWlyZWMzMDAiLCJhIjoiY20xbDllNDI4MDVrNzJqcXZvZm83OGF3byJ9.vxwsTRLEq3Ypnm7TmH2FYQ</string>
    <string name="description">Description</string>
    <string name="snackbar_text">This is a snackbar text</string>
    <string name="updateRVButton">Update Items</string>
    <string name="updatedLabelRV">Last update: </string>
    <string name="headerRV">Other active users</string>
    <string name="emptyRVNotSharingLocation">You have to share your location to see other users</string>
    <string name="emptyRVLocationNotAcquired">You have to send your location first to see other users</string>
    <string name="emptyRVnoActiveUsers">No active users</string>



    <string name="profile_text">My profile</string>
    <string name="profile_load_button">Load profile</string>
    <string name="profile_share_location_label">Share my location</string>
    <string name="profile_logout_btn">Log out</string>
    <string name="fab_edit_image">Edit photo</string>
    <string name="fab_change_password">Change password</string>

    <string name="change_password_text">Password change</string>
    <string name="change_password_actual_text">Actual password</string>
    <string name="change_password_new_text">New password</string>
    <string name="change_password_repeat_text">Repeat new password</string>
    <string name="change_password_btn_text">Change</string>

    <string name="registerErrorRepeatPassword">Passwords do not match</string>
    <string name="registerErrorEmptyEmail">Email can not be empty</string>
    <string name="registerErrorEmptyUsername">Name can not be empty</string>
    <string name="registerErrorEmptyPassword">Password can not be empty</string>
    <string name="registerErrorUsernameExists">Username already exists</string>
    <string name="registerErrorEmailExists">Email is already in use</string>
    <string name="registerErrorUserFailed">Registration failed. Try again...</string>
    <string name="registerErrorNetwork">Failed to create user. Check your internet connection.</string>
    <string name="registerErrorUnexpected">An unexpected error occurred. Try again...</string>
    <string name="registerSuccess">Registration was successful</string>

    <string name="loginErrorEmptyUsername">Name (email) can not be empty</string>
    <string name="loginErrorEmptyPassword">Password can not be empty</string>
    <string name="loginErrorLoginFailed">Incorrect Username (email) or password</string>
    <string name="loginErrorUserFailed">Log in failed. Try again...</string>
    <string name="loginErrorNetwork">Failed to create user. Check your internet connection.</string>
    <string name="loginErrorUnexpected">An unexpected error occurred. Try again...</string>
    <string name="loginSuccess">Log in was successful</string>

    <string name="resetPasswordEmailEmpty">Email can not be empty</string>
    <string name="resetPasswordSuccess">The link to reset the password has been sent to the provided email.</string>
    <string name="resetPasswordFailed">The request to change the password has failed.</string>
    <string name="resetPasswordErrorNetwork">The request has failed. Check your internet connection.</string>
    <string name="resetPasswordErrorUnexpected">An unexpected error occurred. Try again...</string>

    <string name="changePasswordActualPasswordEmpty">Actual password can not be empty</string>
    <string name="changePasswordNewPasswordEmpty">New password can not be empty</string>
    <string name="changePasswordRepeatPasswordMatch">Passwords do not match</string>
    <string name="changePasswordSuccess">Password has been changed</string>
    <string name="changePasswordFailed">The request to change the password has failed.</string>
    <string name="changePasswordErrorNetwork">The request has failed. Check your internet connection.</string>
    <string name="changePasswordErrorUnexpected">An unexpected error occurred. Try again...</string>

    <string name="userErrorGetUserFailed">Failed to load users</string>
    <string name="userErrorNetwork">Failed to load users. Check your internet connection.</string>
    <string name="userErrorUnexpected">An unexpected error occurred. Try again...</string>

    <string name="locationErrorUpdateFailed">Failed to update the location</string>
    <string name="locationErrorDeleteFailed">Failed to delete the location</string>
    <string name="locationErrorUpdateNetwork">Failed to update the location. Check your internet connection.</string>
    <string name="locationErrorDeleteNetwork">Failed to delete the location. Check your internet connection.</string>
    <string name="locationErrorUpdateUnexpected">An unexpected error occurred when updating the location. Try again...</string>
    <string name="locationErrorDeleteUnexpected">An unexpected error occurred when deleting the location. Try again...</string>

    <string name="photoEditorText">Edit profile photo</string>
    <string name="photoEditorNoPhoto">You dont have profile photo set</string>
    <string name="choosePhoto">Select another photo</string>
    <string name="newPhoto">Change profile photo</string>
    <string name="confirmPhoto">Confirm the photo</string>
    <string name="deletePhoto">Delete your photo</string>

    <string name="uploadPhotoSuccess">Profile photo has been changed</string>
    <string name="uploadPhotoFailed">Photo upload has failed</string>
    <string name="uploadPhotoErrorNetwork">Photo upload has failed. Check your internet connection.</string>
    <string name="uploadPhotoErrorUnexpected">An unexpected error occurred. Try again...</string>

    <string name="deletePhotoSuccess">Profile photo has been deleted</string>
    <string name="deletePhotoFailed">Photo deletion has failed</string>
    <string name="deletePhotoErrorNetwork">Photo deletion has failed. Check your internet connection.</string>
    <string name="deletePhotoErrorUnexpected">An unexpected error occurred. Try again...</string>
</resources>