<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="75dp"
        app:srcCompat="@drawable/ic_edit_icon_foreground"
        app:maxImageSize="35dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_edit_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description"
        android:layout_marginBottom="16dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/fab"
        app:layout_constraintEnd_toEndOf="@+id/fab"
        app:layout_constraintStart_toStartOf="@+id/fab"
        app:srcCompat="@drawable/ic_image_icon_foreground"
        style="@style/SmallFabStyle"/>

    <TextView
        android:id="@+id/fab_edit_image_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/fab_edit_image"
        app:layout_constraintBottom_toBottomOf="@+id/fab_edit_image"
        app:layout_constraintEnd_toStartOf="@+id/fab_edit_image"
        app:layout_constraintTop_toTopOf="@+id/fab_edit_image" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description"
        android:layout_marginBottom="16dp"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@+id/fab_edit_image"
        app:layout_constraintEnd_toEndOf="@+id/fab"
        app:layout_constraintStart_toStartOf="@+id/fab"
        app:srcCompat="@drawable/ic_password_foreground"
        style="@style/SmallFabStyle"/>

    <TextView
        android:id="@+id/fab_change_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/fab_change_password"
        app:layout_constraintBottom_toBottomOf="@+id/fab_change_password"
        app:layout_constraintEnd_toStartOf="@+id/fab_change_password"
        app:layout_constraintTop_toTopOf="@+id/fab_change_password" />

</androidx.constraintlayout.widget.ConstraintLayout>